--- a/.htaccess
+++ b/.htaccess
@@ -1,8 +1,12 @@
 <IfModule mod_rewrite.c>
-    RewriteEngine on
-    RewriteCond %{REQUEST_FILENAME} -s [OR]
-    RewriteCond %{REQUEST_FILENAME} -l [OR]
-    RewriteCond %{REQUEST_FILENAME} -d
-    RewriteRule ^.*$ - [NC,L]
-    RewriteRule ^(.*) /portfolio-angular11-dataLocal/index.html [NC,L]
+  RewriteEngine On
+  RewriteBase /portfolio-angular11-dataLocal
+  RewriteRule ^index\.html$ - [L]
+
+  RewriteCond %{REQUEST_FILENAME} !-f
+  RewriteCond %{REQUEST_FILENAME} !-d
+  RewriteCond %{REQUEST_URI} !server-calls
+  RewriteRule . /index.html [L]
 </IfModule>
+
+
