--- a/.htaccess
+++ b/.htaccess
@@ -1,12 +1,13 @@
+# ng build --prod --base-href './'
 <IfModule mod_rewrite.c>
-  RewriteEngine On
-  RewriteBase /portfolio-angular11-dataLocal
-  RewriteRule ^index\.html$ - [L]
+  RewriteEngine on
+  # Don't rewrite files or directories
+  RewriteCond %{REQUEST_FILENAME} -f [OR]
+  RewriteCond %{REQUEST_FILENAME} -d
+  RewriteRule ^ - [L]
 
-  RewriteCond %{REQUEST_FILENAME} !-f
-  RewriteCond %{REQUEST_FILENAME} !-d
-  RewriteCond %{REQUEST_URI} !server-calls
-  RewriteRule . /index.html [L]
+  # Rewrite everything else to index.html
+  # to allow html5 state links
+  RewriteRule ^ index.html [L]
 </IfModule>
-
 
