--- a/docs/.htaccess
+++ b/docs/.htaccess
@@ -6,6 +6,7 @@ RewriteCond %{DOCUMENT_ROOT}%{REQUEST_URI} -f [OR]
 RewriteCond %{DOCUMENT_ROOT}%{REQUEST_URI} -d
 RewriteRule ^ - [L]
 RewriteRule ^ /index.html
+RewriteRule ^ /404.html
 </IfModule>
 
 
